feat: enforce multi-tenant company scoping and update security authorizations for HR management operations